# strata

./: .gitattributes  .gitignore  GEMINI.md  LICENSE  README.md  STRATA_FORGE_AI.md  implementation.md  package-lock.json  package.json  playwright.config.ts  report.md  strata_key  strata_key.pub  svelte.config.js  vite.config.js
.github/workflows/: release.yml  test.yml
coverage/: clover.xml  coverage-final.json  index.html  parser.ts.html  state.svelte.ts.html
coverage/lib/: index.html  parser.ts.html  state.svelte.ts.html
coverage/lib/services/: index.html  platform.ts.html
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: coordinator.rs  lib.rs
src/lib/: parser.test.ts  parser.ts  schemas.ts  state.svelte.ts  state.test.ts
src/lib/components/: AddFieldForm.svelte  AddRelationForm.svelte  BottomBar.svelte  CodeEditor.svelte  ContextMenu.svelte  DiagramCanvas.svelte  HelpModal.svelte  Inspector.svelte  Navbar.svelte  NewTableForm.svelte  Overlays.svelte  ProjectSettingsModal.svelte  RelationEdge.svelte  ResolverModal.svelte  SchemaEditor.svelte  SchemaStats.svelte  TableNode.svelte  (+1 more)
src/routes/: +layout.svelte  +page.svelte  layout.css
static/: splash.html
tests/: code-mirror.spec.ts  export.spec.ts  fixtures.ts  help-modal.spec.ts  initial-state.spec.ts  modal-flows.spec.ts  persistence-loop.spec.ts  rendering.spec.ts  stress-test.spec.ts
tests/utils/: tauri-mock.ts
tests/vitest/: idempotency.test.ts  layout.test.ts  parser.test.ts  state.test.ts
(+22 files in other folders)
